Implementing the Topics bar

--- a/youtube/youtube-copy.html
+++ b/youtube/youtube-copy.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./styles/yt-general.css">
   <link rel="stylesheet" href="./styles/yt-header.css">
   <link rel="stylesheet" href="./styles/yt-sidebar.css">
+  <link rel="stylesheet" href="./styles/yt-topics.css">
   <title>YouTube</title>
 </head>
 <body>
@@ -354,5 +355,60 @@
       </div>
     </div>
   </aside>
+  <div class="topics">
+    <button class="topics-button">
+      All
+    </button>
+    <button class="topics-button">
+      Live
+    </button>
+    <button class="topics-button topics-button_music">
+      Music
+    </button>
+    <button class="topics-button">
+      Gaming
+    </button>
+    <button class="topics-button">
+      Ambient Music
+    </button>
+    <button class="topics-button">
+      Lil Peep
+    </button>
+    <button class="topics-button">
+      Lo-Fi
+    </button>
+    <button class="topics-button">
+      Cooking
+    </button>
+    <button class="topics-button">
+      CSS
+    </button>
+    <button class="topics-button">
+      Platzi
+    </button>
+    <button class="topics-button">
+      The Wild Project
+    </button>
+    <button class="topics-button">
+      Piano
+    </button>
+    <button class="topics-button">
+      JavaScript
+    </button>
+    <button class="topics-button">
+      Rain
+    </button>
+    <button class="topics-button">
+      Joji
+    </button>
+    <div class="topics-next">
+      <button class="topics-next_arrow">
+        &#62;
+        <span class="topics-tooltip">
+          Next
+        </span>
+      </button>
+    </div>
+  </div>
 </body>
 </html>
