Adding the latest changes to YouTube main page

--- a/youtube/youtube-copy.html
+++ b/youtube/youtube-copy.html
@@ -53,6 +53,9 @@
       </figure>
       <figure class="header-right_notifications">
         <img class="header-right_notifications-img" src="./images/icons/notifications.svg" alt="Notifications Icon">
+        <span class="header-right_notifications-number">
+          4
+        </span>
         <span class="tooltip">
           Notifications
         </span>
