--- a/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
+++ b/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
@@ -7,19 +7,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles/yt-general.css">
-  <link rel="stylesheet" href="./styles/yt-header.css">
+  <link rel="stylesheet" href="../styles/yt-general.css">
+  <link rel="stylesheet" href="../styles/yt-header.css">
   <title>Post Malone - Saint-Tropez</title>
 </head>
 <body>
   <header class="header">
     <div class="header-left">
       <figure class="header-left_menu">
-        <img class="header-left_menu-img" src="./images/icons/hamburger-menu.svg" alt="Hamburguer Menu">
+        <img class="header-left_menu-img" src="../images/icons/hamburger-menu.svg" alt="Hamburguer Menu">
       </figure>
       <a class="header-left_youtube-link" href="https://www.youtube.com">
         <figure class="header-left_youtube-logo">
-            <img class="header-left_youtube-logo-img" src="./images/icons/youtube-logo.svg" alt="Youtube Colombia Logo">
+            <img class="header-left_youtube-logo-img" src="../images/icons/youtube-logo.svg" alt="Youtube Colombia Logo">
           <span class="header-left_CO">
             CO
           </span>
@@ -29,13 +29,13 @@
     <div class="header-middle">
       <input class="header-middle_search-bar" type="text" placeholder="Search">
       <button class="header-middle_search-button">
-        <img class="header-middle_search-button__img" src="./images/icons/search-icon.svg" alt="Magnifying Glass Icon">
+        <img class="header-middle_search-button__img" src="../images/icons/search-icon.svg" alt="Magnifying Glass Icon">
         <span class="tooltip">
           Search
         </span>
       </button>
       <button class="header-middle_voice-search-button">
-        <img class="header-middle_voice-search-button__img" src="./images/icons/voice-search-icon.svg" alt="Voice Search Icon">
+        <img class="header-middle_voice-search-button__img" src="../images/icons/voice-search-icon.svg" alt="Voice Search Icon">
         <span class="tooltip">
           Search with your voice
         </span>
@@ -43,19 +43,19 @@
     </div>
     <div class="header-right">
       <figure class="header-right_upload">
-        <img class="header-right_upload-img" src="./images/icons/upload.svg" alt="Upload Icon">
+        <img class="header-right_upload-img" src="../images/icons/upload.svg" alt="Upload Icon">
         <span class="tooltip">
           Upload
         </span>
       </figure>
       <figure class="header-right_notifications">
-        <img class="header-right_notifications-img" src="./images/icons/notifications.svg" alt="Notifications Icon">
+        <img class="header-right_notifications-img" src="../images/icons/notifications.svg" alt="Notifications Icon">
         <span class="tooltip">
           Notifications
         </span>
       </figure>
       <figure class="header-right_profile">
-        <img class="header-right_profile-img" src="./images/channel-pictures/channel-profile-owner.jpg" alt="Profile Image">
+        <img class="header-right_profile-img" src="../images/channel-pictures/channel-profile-owner.jpg" alt="Profile Image">
       </figure>
     </div>
   </header>
