--- a/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
+++ b/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
@@ -4,19 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--Adding 'Roboto' font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <!--Adding styles-->
   <link rel="stylesheet" href="../styles/yt-general.css">
   <link rel="stylesheet" href="../styles/yt-header.css">
   <title>Post Malone - Saint-Tropez</title>
 </head>
 <body>
   <header class="header">
+    <!--Left side of the header-->
     <div class="header-left">
+      <!--Hamgburguer menu-->
       <figure class="header-left_menu">
         <img class="header-left_menu-img" src="../images/icons/hamburger-menu.svg" alt="Hamburguer Menu">
       </figure>
+      <!--YouTube Logo-->
       <a class="header-left_youtube-link" href="https://www.youtube.com">
         <figure class="header-left_youtube-logo">
             <img class="header-left_youtube-logo-img" src="../images/icons/youtube-logo.svg" alt="Youtube Colombia Logo">
@@ -26,7 +31,9 @@
         </figure>
       </a>
     </div>
+    <!--Central side of the header-->
     <div class="header-middle">
+      <!--Search bar-->
       <input class="header-middle_search-bar" type="text" placeholder="Search">
       <button class="header-middle_search-button">
         <img class="header-middle_search-button__img" src="../images/icons/search-icon.svg" alt="Magnifying Glass Icon">
@@ -34,6 +41,7 @@
           Search
         </span>
       </button>
+      <!--Voice Search-->
       <button class="header-middle_voice-search-button">
         <img class="header-middle_voice-search-button__img" src="../images/icons/voice-search-icon.svg" alt="Voice Search Icon">
         <span class="tooltip">
@@ -41,19 +49,26 @@
         </span>
       </button>
     </div>
+    <!--Right side of the header-->
     <div class="header-right">
+      <!--Upload Button-->
       <figure class="header-right_upload">
         <img class="header-right_upload-img" src="../images/icons/upload.svg" alt="Upload Icon">
         <span class="tooltip">
           Upload
         </span>
       </figure>
+      <!--Notifications Button-->
       <figure class="header-right_notifications">
         <img class="header-right_notifications-img" src="../images/icons/notifications.svg" alt="Notifications Icon">
+        <span class="header-right_notifications-number">
+          4
+        </span>
         <span class="tooltip">
           Notifications
         </span>
       </figure>
+      <!--Profile Picture-->
       <figure class="header-right_profile">
         <img class="header-right_profile-img" src="../images/channel-pictures/channel-profile-owner.jpg" alt="Profile Image">
       </figure>
