Adding the principal content

--- a/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
+++ b/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
@@ -59,5 +59,106 @@
       </figure>
     </div>
   </header>
+  <main class="main">
+    <video class="main-video" src="./videos/y2mate.com - Post Malone  SaintTropez Official Video_1080p.mp4" controls>
+      Post Malone - Saint-Tropez (Official Video)
+    </video>
+    <h1 class="main-title">
+      Post Malone - Saint-Tropez (Official Video)
+    </h1>
+    <div class="main-channel">
+      <img class="main-channel_img" src="../images/channel-pictures/channel-picture-post.jpg" alt="Post Malone Channel Picture">
+      <div class="main-channel_info">
+        <div class="main-channel_info-name">
+          <span>
+            Post Malone
+          </span>
+          <img src="../images/icons/music.svg" alt="Music Badge">
+        </div>
+        <span class="main-channel_info-subscribers">
+          25M subscribers
+        </span>
+      </div>
+      <button class="main-channel_subscribe">
+        Subscribe
+      </button>
+    </div>
+    <div class="main-interactions">
+      <div class="main-interactions_like">
+        <button class="main-interactions_like-like">
+          <img class="main-interactions_like-img" src="../images/icons/liked-videos.svg" alt="Like Icon">
+          <span class="main-interactions_like-amount">
+            1.2M
+          </span>
+        </button>
+        <button class="main-interactions_like-">
+          <img class="main-interactions_like-img" src="../images/icons/dislike.svg" alt="Dislike Icon">
+        </button>
+      </div>
+      <div class="main-interactions_share">
+        <button class="main-interactions_share-button">
+          <img class="main-interactions_share-img" src="../images/icons/share.svg" alt="Share Icon">
+          Share
+        </button>
+      </div>
+      <div class="main-interactions_download">
+        <button class="main-interactions_download-button">
+          <img class="main-interactions_download-img" src="../images/icons/download.svg" alt="Download Icon">
+          Download
+        </button>
+      </div>
+      <div class="main-interactions_more">
+        <button class="main-interactions_more-button">
+          ...
+        </button>
+      </div>
+    </div>
+    <div class="main-info">
+      <span class="main-info_views">
+        115M views
+      </span>
+      <span class="main-info_date">
+        3 years ago
+      </span>
+      <span class="main-info_tags">
+        #PostMalone #SaintTropez #HollywoodBleeding
+      </span>
+      <span class="main-info_description">
+        Official music video by Post Malone performint "Saint-Tropez" -- off his new album 'Hollywood's Bleeding' available now:
+      </span>
+      <a href="https://postmalone.lnk.to/hollywoodsbleedingYD">
+        <span class="main-info_link">
+          https://postmalone.lnk.to/hollywoodsb...
+        </span>
+      </a>
+    </div>
+    <div class="main-suggested">
+      <span class="main-suggested_suggester">
+        Suggested by UMg
+      </span>
+      <span class="main-suggested_video">
+        <a href="https://www.youtube.com/watch?v=lCiV4wACZ8w">
+          Post Malone - Motley Crew (Official Video)
+        </a>
+      </span>
+    </div>
+  </main>
+  <div class="topics">
+    <button class="topics-button_all">
+      All
+    </button>
+    <button class="topics-button">
+      Related
+    </button>
+    <button class="topics-button">
+      Live
+    </button>
+    <button class="topics-button">
+      Recently uploaded
+    </button>
+    <button class="topics-button">
+      Watched
+    </button>
+  </div>
 </body>
 </html>
