Finishing Right Panel Controls of the Video and fixing an issue with the Channel Image

--- a/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
+++ b/youtube/youtube-videos/youtube-copy-video-saint_tropez.html
@@ -183,21 +183,58 @@
               </div>
             </div>
           </div>
+          <!--Video Controls Right-->
           <div class="video-panel_controls-right">
+            <!--Autoplay-->
             <figure class="video-panel_fig">
-              <img class="video-panel_img-" src="" alt="">
+              <img class="video-panel_img-autoplay" src="../images/icons/autoplay.svg" alt="Autoplay Icon">
+              <!--Autoplay Tooltip-->
+              <span class="video-panel_tooltip autoplay-tooltip">
+                Auto-play is on
+              </span>
             </figure>
+            <!--Subtitles-->
             <figure class="video-panel_fig">
-              <img class="video-panel_img-" src="" alt="">
+              <img class="video-panel_img-subtitles" src="../images/icons/subtitles.svg" alt="Subtitles Icon">
+              <!--Subtitles Tooltip-->
+              <span class="video-panel_tooltip subtitles-tooltip">
+                Subtitles/closed captions unavailable
+              </span>
             </figure>
+            <!--Settings-->
             <figure class="video-panel_fig">
-              <img class="video-panel_img-" src="" alt="">
+              <img class="video-panel_img-settings" src="../images/icons/config.svg" alt="Settings Icon">
+              <!--Settings Tooltip-->
+              <span class="video-panel_tooltip settings-tooltip">
+                Settings
+              </span>
+              <span class="video-panel_img-settings__hd">
+                HD
+              </span>
             </figure>
+            <!--Miniplayer-->
             <figure class="video-panel_fig">
-              <img class="video-panel_img-" src="" alt="">
+              <img class="video-panel_img-miniplayer" src="../images/icons/miniplayer.svg" alt="Miniplayer Icon">
+              <!--Miniplayer Tooltip-->
+              <span class="video-panel_tooltip miniplayer-tooltip">
+                Miniplayer (i)
+              </span>
             </figure>
+            <!--Default View-->
             <figure class="video-panel_fig">
-              <img class="video-panel_img-" src="" alt="">
+              <img class="video-panel_img-defaultview" src="../images/icons/default-view.svg" alt="Default View Icon">
+              <!--Default View Tooltip-->
+              <span class="video-panel_tooltip defaultview-tooltip">
+                Default view (t)
+              </span>
+            </figure>
+            <!--Fullscreen-->
+            <figure class="video-panel_fig">
+              <img class="video-panel_img-fullscreen" src="../images/icons/fullscreen.svg" alt="Sullscreen Icon">
+              <!--Fullscreen Tooltip-->
+              <span class="video-panel_tooltip fullscreen-tooltip">
+                Full screen (f)
+              </span>
             </figure>
           </div>
         </div>
